package NYT.NChunkClient.NProto;

import "yt/ytlib/misc/guid.proto";

////////////////////////////////////////////////////////////////////////////////

message TReqAttach
{
    repeated NYT.NProto.TGuid children_ids = 2;
}

message TRspAttach
{ }

////////////////////////////////////////////////////////////////////////////////
